MIDIInstrument/MIDIInstrument.h


typedef struct tagMIDIPatchNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[128];
	long  m_lNameLen[128];
	struct tagMIDIPatchNameTable* m_pBasedOn;
	struct tagMIDIPatchNameTable* m_pNextPatchNameTable;
	struct tagMIDIPatchNameTable* m_pPrevPatchNameTable;
	void* m_pParent;
} MIDIPatchNameTable;
typedef struct tagMIDINoteNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[128];
	long  m_lNameLen[128];
	struct tagMIDINoteNameTable* m_pBasedOn;
	struct tagMIDINoteNameTable* m_pNextNoteNameTable;
	struct tagMIDINoteNameTable* m_pPrevNoteNameTable;
	void* m_pParent;
} MIDINoteNameTable;
typedef struct tagMIDIControllerNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[128];
	long  m_lNameLen[128];
	struct tagMIDIControllerNameTable* m_pBasedOn;
	struct tagMIDIControllerNameTable* m_pNextControllerNameTable;
	struct tagMIDIControllerNameTable* m_pPrevControllerNameTable;
	void* m_pParent;
} MIDIControllerNameTable;
typedef struct tagMIDIRPNNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[16384];
	long  m_lNameLen[16384];
	struct tagMIDIRPNNameTable* m_pBasedOn;
	struct tagMIDIRPNNameTable* m_pNextRPNNameTable;
	struct tagMIDIRPNNameTable* m_pPrevRPNNameTable;
	void* m_pParent;
} MIDIRPNNameTable;
typedef struct tagMIDINRPNNameTable {
	void* m_pszTitle;
	long  m_lTitleLen;
	void* m_pszName[16384];
	long  m_lNameLen[16384];
	struct tagMIDINRPNNameTable* m_pBasedOn;
	struct tagMIDINRPNNameTable* m_pNextNRPNNameTable;
	struct tagMIDINRPNNameTable* m_pPrevNRPNNameTable;
	void* m_pParent;
} MIDINRPNNameTable;
typedef struct tagMIDIInstrumentDefinition {
	void* m_pszTitle;
	long m_lTitleLen;
	MIDIControllerNameTable* m_pMIDIControllerNameTable;
	MIDIRPNNameTable* m_pMIDIRPNNameTable;
	MIDINRPNNameTable* m_pMIDINRPNNameTable;
	long m_lMIDIPatchNameNum;
	long m_lMIDIPatchNameBank[MIDIINSTRUMENTDEFINITION_MAXPATCHNAME];
	MIDIPatchNameTable* m_pMIDIPatchNameTable[MIDIINSTRUMENTDEFINITION_MAXPATCHNAME];
	long m_lMIDINoteNameNum;
	long m_lMIDINoteNameBank[MIDIINSTRUMENTDEFINITION_MAXNOTENAME];
	long m_lMIDINoteNameProgram[MIDIINSTRUMENTDEFINITION_MAXNOTENAME];
	MIDINoteNameTable* m_pMIDINoteNameTable[MIDIINSTRUMENTDEFINITION_MAXNOTENAME];
	struct tagMIDIInstrumentDefinition* m_pNextInstrumentDefinition;
	struct tagMIDIInstrumentDefinition* m_pPrevInstrumentDefinition;
	void* m_pParent;
} MIDIInstrumentDefinition;
typedef struct tagMIDIInstrument {
	MIDIPatchNameTable* m_pFirstPatchNameTable;
	MIDIPatchNameTable* m_pLastPatchNameTable;
	MIDINoteNameTable* m_pFirstNoteNameTable;
	MIDINoteNameTable* m_pLastNoteNameTable;
	MIDIControllerNameTable *m_pFirstControllerNameTable;
	MIDIControllerNameTable *m_pLastControllerNameTable;
	MIDIRPNNameTable* m_pFirstRPNNameTable;
	MIDIRPNNameTable* m_pLastRPNNameTable;
	MIDINRPNNameTable* m_pFirstNRPNNameTable;
	MIDINRPNNameTable* m_pLastNRPNNameTable;
	MIDIInstrumentDefinition* m_pFirstInstrumentDefinition;
	MIDIInstrumentDefinition* m_pLastInstrumentDefinition;
} MIDIInstrument;
MIDIPatchNameTable* __stdcall MIDIPatchNameTable_Create ();
void __stdcall MIDIPatchNameTable_Delete (MIDIPatchNameTable* pMIDIPatchNameTable);
long __stdcall MIDIPatchNameTable_SetTitleA 
(MIDIPatchNameTable* pMIDIPatchNameTable, const char* pszTitle);
#define MIDIPatchNameTable_SetTitle MIDIPatchNameTable_SetTitleW
#define MIDIPatchNameTable_SetTitle MIDIPatchNameTable_SetTitleA
long __stdcall MIDIPatchNameTable_SetNameA
(MIDIPatchNameTable* pMIDIPatchNameTable, long lNumber, const char* pszName);
#define MIDIPatchNameTable_SetName MIDIPatchNameTable_SetNameW
#define MIDIPatchNameTable_SetName MIDIPatchNameTable_SetNameA
long __stdcall MIDIPatchNameTable_GetTitleA 
(MIDIPatchNameTable* pMIDIPatchNameTable, char* pszTitle, long lLen);
#define MIDIPatchNameTable_GetTitle MIDIPatchNameTable_GetTitleW
#define MIDIPatchNameTable_GetTitle MIDIPatchNameTable_GetTitleA
long __stdcall MIDIPatchNameTable_GetNameA
(MIDIPatchNameTable* pMIDIPatchNameTable, long lNumber, char* pszName, long lLen);
#define MIDIPatchNameTable_GetName MIDIPatchNameTable_GetNameW
#define MIDIPatchNameTable_GetName MIDIPatchNameTable_GetNameA
MIDIPatchNameTable* __stdcall MIDIPatchNameTable_GetNextPatchNameTable 
(MIDIPatchNameTable* pMIDIPatchNameTable);
MIDIPatchNameTable* __stdcall MIDIPatchNameTable_GetPrevPatchNameTable 
(MIDIPatchNameTable* pMIDIPatchNameTable);
MIDIInstrument* __stdcall MIDIPatchNameTable_GetParent
(MIDIPatchNameTable* pMIDIPatchNameTable);
MIDINoteNameTable* __stdcall MIDINoteNameTable_Create ();
void __stdcall MIDINoteNameTable_Delete (MIDINoteNameTable* pMIDINoteNameTable);
long __stdcall MIDINoteNameTable_SetTitleA
(MIDINoteNameTable* pMIDINoteNameTable, const char* pszTitle);
#define MIDINoteNameTable_SetTitle MIDINoteNameTable_SetTitleW
#define MIDINoteNameTable_SetTitle MIDINoteNameTable_SetTitleA
long __stdcall MIDINoteNameTable_SetNameA 
(MIDINoteNameTable* pMIDINoteNameTable, long lNumber, const char* pszName);
#define MIDINoteNameTable_SetName MIDINoteNameTable_SetNameW
#define MIDINoteNameTable_SetName MIDINoteNameTable_SetNameA
long __stdcall MIDINoteNameTable_GetTitleA 
(MIDINoteNameTable* pMIDINoteNameTable, char* pszTitle, long lLen);
#define MIDINoteNameTable_GetTitle MIDINoteNameTable_GetTitleW
#define MIDINoteNameTable_GetTitle MIDINoteNameTable_GetTitleA
long __stdcall MIDINoteNameTable_GetNameA 
(MIDINoteNameTable* pMIDINoteNameTable, long lNumber, char* pszName, long lLen);
#define MIDINoteNameTable_GetName MIDINoteNameTable_GetNameW
#define MIDINoteNameTable_GetName MIDINoteNameTable_GetNameA
MIDINoteNameTable* __stdcall MIDINoteNameTable_GetNextNoteNameTable 
(MIDINoteNameTable* pMIDINoteNameTable);
MIDINoteNameTable* __stdcall MIDINoteNameTable_GetPrevNoteNameTable 
(MIDINoteNameTable* pMIDINoteNameTable);
MIDIInstrument* __stdcall MIDINoteNameTable_GetParent
(MIDINoteNameTable* pMIDINoteNameTable);
MIDIControllerNameTable* __stdcall MIDIControllerNameTable_Create ();
void __stdcall MIDIControllerNameTable_Delete (MIDIControllerNameTable* pMIDIControllerNameTable);
long __stdcall MIDIControllerNameTable_SetTitleA 
(MIDIControllerNameTable* pMIDIControllerNameTable, const char* pszTitle);
#define MIDIControllerNameTable_SetTitle MIDIControllerNameTable_SetTitleW
#define MIDIControllerNameTable_SetTitle MIDIControllerNameTable_SetTitleA
long __stdcall MIDIControllerNameTable_SetNameA 
(MIDIControllerNameTable* pMIDIControllerNameTable, long lNumber, const char* pszName);
#define MIDIControllerNameTable_SetName MIDIControllerNameTable_SetNameW
#define MIDIControllerNameTable_SetName MIDIControllerNameTable_SetNameA
long __stdcall MIDIControllerNameTable_GetTitleA 
(MIDIControllerNameTable* pMIDIControllerNameTable, char* pszTitle, long lLen);
#define MIDIControllerNameTable_GetTitle MIDIControllerNameTable_GetTitleW
#define MIDIControllerNameTable_GetTitle MIDIControllerNameTable_GetTitleA
long __stdcall MIDIControllerNameTable_GetNameA 
(MIDIControllerNameTable* pMIDIControllerNameTable, long lNumber, char* pszName, long lLen);
#define MIDIControllerNameTable_GetName MIDIControllerNameTable_GetNameW
#define MIDIControllerNameTable_GetName MIDIControllerNameTable_GetNameA
MIDIControllerNameTable* __stdcall MIDIControllerNameTable_GetNextControllerNameTable 
(MIDIControllerNameTable* pMIDIControllerNameTable);
MIDIControllerNameTable* __stdcall MIDIControllerNameTable_GetPrevControllerNameTable 
(MIDIControllerNameTable* pMIDIControllerNameTable);
MIDIInstrument* __stdcall MIDIControllerNameTable_GetParent
(MIDIControllerNameTable* pMIDIControllerNameTable);
MIDIRPNNameTable* __stdcall MIDIRPNNameTable_Create ();
void __stdcall MIDIRPNNameTable_Delete (MIDIRPNNameTable* pMIDIRPNNameTable);
long __stdcall MIDIRPNNameTable_SetTitleA 
(MIDIRPNNameTable* pMIDIRPNNameTable, const char* pszTitle);
#define MIDIRPNNameTable_SetTitle MIDIRPNNameTable_SetTitleW
#define MIDIRPNNameTable_SetTitle MIDIRPNNameTable_SetTitleA
long __stdcall MIDIRPNNameTable_SetNameA 
(MIDIRPNNameTable* pMIDIRPNNameTable, long lNumber, const char* pszName);
#define MIDIRPNNameTable_SetName MIDIRPNNameTable_SetNameW
#define MIDIRPNNameTable_SetName MIDIRPNNameTable_SetNameA
long __stdcall MIDIRPNNameTable_GetTitleA 
(MIDIRPNNameTable* pMIDIRPNNameTable, char* pszTitle, long lLen);
#define MIDIRPNNameTable_GetTitle MIDIRPNNameTable_GetTitleW
#define MIDIRPNNameTable_GetTitle MIDIRPNNameTable_GetTitleA
long __stdcall MIDIRPNNameTable_GetNameA 
(MIDIRPNNameTable* pMIDIRPNNameTable, long lNumber, char* pszName, long lLen);
#define MIDIRPNNameTable_GetName MIDIRPNNameTable_GetNameW
#define MIDIRPNNameTable_GetName MIDIRPNNameTable_GetNameA
MIDIRPNNameTable* __stdcall MIDIRPNNameTable_GetNextRPNNameTable 
(MIDIRPNNameTable* pMIDIRPNNameTable);
MIDIRPNNameTable* __stdcall MIDIRPNNameTable_GetPrevRPNNameTable 
(MIDIRPNNameTable* pMIDIRPNNameTable);
MIDIInstrument* __stdcall MIDIRPNNameTable_GetParent
(MIDIRPNNameTable* pMIDIRPNNameTable);
MIDINRPNNameTable* __stdcall MIDINRPNNameTable_Create ();
void __stdcall MIDINRPNNameTable_Delete (MIDINRPNNameTable* pMIDINRPNNameTable);
long __stdcall MIDINRPNNameTable_SetTitleA 
(MIDINRPNNameTable* pMIDINRPNNameTable, const char* pszTitle);
#define MIDINRPNNameTable_SetTitle MIDINRPNNameTable_SetTitleW
#define MIDINRPNNameTable_SetTitle MIDINRPNNameTable_SetTitleA
long __stdcall MIDINRPNNameTable_SetNameA 
(MIDINRPNNameTable* pMIDINRPNNameTable, long lNumber, const char* pszName);
#define MIDINRPNNameTable_SetName MIDINRPNNameTable_SetNameW
#define MIDINRPNNameTable_SetName MIDINRPNNameTable_SetNameA
long __stdcall MIDINRPNNameTable_GetTitleA 
(MIDINRPNNameTable* pMIDINRPNNameTable, char* pszTitle, long lLen);
#define MIDINRPNNameTable_GetTitle MIDINRPNNameTable_GetTitleW
#define MIDINRPNNameTable_GetTitle MIDINRPNNameTable_GetTitleA
long __stdcall MIDINRPNNameTable_GetNameA 
(MIDINRPNNameTable* pMIDINRPNNameTable, long lNumber, char* pszName, long lLen);
#define MIDINRPNNameTable_GetName MIDINRPNNameTable_GetNameW
#define MIDINRPNNameTable_GetName MIDINRPNNameTable_GetNameA
MIDINRPNNameTable* __stdcall MIDINRPNNameTable_GetNextNRPNNameTable 
(MIDINRPNNameTable* pMIDINRPNNameTable);
MIDINRPNNameTable* __stdcall MIDINRPNNameTable_GetPrevNRPNNameTable 
(MIDINRPNNameTable* pMIDINRPNNameTable);
MIDIInstrument* __stdcall MIDINRPNNameTable_GetParent
(MIDINRPNNameTable* pMIDINRPNNameTable);
MIDIInstrumentDefinition* __stdcall MIDIInstrumentDefinition_Create ();
void __stdcall MIDIInstrumentDefinition_Delete (MIDIInstrumentDefinition* pMIDIInstrumentDefinition);
long __stdcall MIDIInstrumentDefinition_SetTitleA 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition, const char* pszTitle);
#define MIDIInstrumentDefinition_SetTitle MIDIInstrumentDefinition_SetTitleW
#define MIDIInstrumentDefinition_SetTitle MIDIInstrumentDefinition_SetTitleA
long __stdcall MIDIInstrumentDefinition_SetControllerNameTable 
(MIDIInstrumentDefinition* pMIDIInstrumentDefinition, MIDIControllerNameTable* pMIDIControllerNameTable);